--- a/src/shared/header/header.scss
+++ b/src/shared/header/header.scss
@@ -3,6 +3,15 @@
 header{
     background-color: $light-background;
     box-shadow: $box-shadow;
+    .nav-brand{
+        color: $gray;
+        font-size: $large-light;
+        margin-right: 20px;
+      &:hover{
+        text-decoration: none;
+        color: $gray;
+      }
+    }
     .navbar{
         .nav-item{
             .nav-link{
